The text widget was returning a fraction height which was throeing things off so I made a copy of the Grid widget that .ceal()s it's childrens size.  It appears I've found a bug in the rust_analyzer as it is reporting an error that doesn't happen when you build the app

--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -5,6 +5,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-fyrox = { path = "../../Fyrox" }
-fyroxed_base = { path = "../../Fyrox/editor" }
+fyrox = "0.30.0"
+fyroxed_base = "0.17.0"
 bleeping_fyrox = { path = "../game" }
