--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -5,5 +5,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-fyrox = { path = "../../Fyrox" }
+fyrox = "0.30.0"
 bleeping_fyrox = { path = "../game" }
